website/websites/gp4/code/message-scala.log
BUILD COMMANDS FOR: message.scala

Tue Sep 11 13:47:21 PDT 2007

( if [ ! -d message.scala_run ] ; then mkdir message.scala_run ; fi)
cp /home/dunham/gp4/shootout/bench/message/message.scala message.scala_run/message.scala
( cd message.scala_run ; /opt/scala-2.6.0/bin/scalac message.scala )
message.scala:17: error: not found: type Actor
      class Incrementor(next: Pid) extends Actor {
                                           ^
message.scala:17: error: not found: type Pid
      class Incrementor(next: Pid) extends Actor {
                              ^
message.scala:22: error: not found: value receive
               receive { 
               ^
message.scala:38: error: value start is not a member of Incrementor
         def pid() = { this.start; this.self }
                           ^
message.scala:38: error: value self is not a member of Incrementor
         def pid() = { this.start; this.self }
                                       ^
message.scala:41: error: not found: type Pid
      def actorChain(i: Int, a: Pid): Pid = 
                                      ^
message.scala:41: error: not found: type Pid
      def actorChain(i: Int, a: Pid): Pid = 
                                ^
7 errors found
make[3]: [message.scala_run] Error 1 (ignored)
touch message.scala_run

=================================================================
COMMAND LINE (%A is single numeric argument):

 JAVACMD="/opt/sun-jdk-1.6.0.02/bin/java $JDKFLAGS -server -Xbatch" /opt/scala-2.6.0/bin/scala -classpath message.scala_run message %A
************************************************************
*   TEST (message.scala_run) FAILED - ERROR:  message.scala_out differs from Output.5000
************************************************************
-rw-r--r-- 1 dunham users  8 Nov 12  2005 Output.5000
-rw-r--r-- 1 dunham users 22 Sep 11 13:47 message.scala_out


PROGRAM OUTPUT
==============
no such file: message
